// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`push instruction compiler > pushes a constant value 1`] = `
{
  "loopSegmentByteCode": [
    65,
    42,
  ],
  "stack": [
    {
      "constantValue": 42,
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a literal value 1`] = `
{
  "loopSegmentByteCode": [
    65,
    5,
  ],
  "stack": [
    {
      "constantValue": 5,
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;
